--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>Walid is a post-doctoral research fellow and works on multi-observable probabilistic tomography for different targets (mining, seismic hazard). He is also interested to mahine learning applied in geosphysics. In parallel of his work, Walid practices judo, long distance running and organises every year local events for the festival Pint of Science.  As ECS rep, he will work on the bridge between academic and industry field and also on short courses for non-seismologists with the team.<br>
   Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/example/">View LinkedIn </a> 
+  <a href="https://www.linkedin.com/in/example/">View LinkedIn </a> 
+  <a href="https://www.linkedin.com/in/example/">View Scholar </a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
