--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,11 @@
-title: Walid  Ben Mansour # your name (or website title) here
+title: Walid Ben Mansour # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <br>Walid is a post-doctoral research fellow and works on multi-observable probabilistic tomography for different targets (mining, seismic hazard). <br>
-  <a href="https://www.linkedin.com/in/example/">View LinkedIn </a> 
- theme: jekyll-theme-minimal
+  First description 
+  <br><br>
+  Second description 
+  <br><br>
+  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  
+theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
