--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 title: Walid Ben Mansour # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
-  <br><br>
+  Structural seismologist 
+  <br>lksdkfsdjflsdjflksd<br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
