--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Walid Ben Mansour # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Structural seismologist 
-  <br>lksdkfsdjflsdjflksd<br>
+  Structural seismologist-Geophysicist
+  <br>Post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard). <br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
