--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Structural seismologist-Geophysicist
   
-  <br>post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard).  <br>
+  <br>Post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard).  <br>
 theme: jekyll-theme-minimal
 
