--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   Structural seismologist-Geophysicist
   
   <br>Post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard).  <br>
-  [Project 4](/pdf/project4.md)
+ 
+ 
+ ### Projects
+[Project1](/pdf/project1.md)
 theme: jekyll-theme-minimal
 
