--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   Structural seismologist-Geophysicist
   
   <br>Post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard).  <br>
+  
+    <br>Research interests:   <br>
+
 theme: jekyll-theme-minimal
 
