--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>Post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard).  <br>
   
     <br>Research interests:   <br>
+    <br>Physical state and thermochemical structre of crust and upper mantle   <br>
+    <br>Mantle rheology   <br> 
+    <br>Seismic cycle   <br>
 
 theme: jekyll-theme-minimal
 
