--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>Post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard).  <br>
   
     <br>Research interests:   <br>
-    <br> o Thermochemical tomography
+    <br> o Cratonic domains
+         o Volcanism
          o Mantle rheology 
          o Seismic cycle   <br>
 
