--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br>Post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard).  <br>
   
     <br>Research interests:   <br>
-    <br> o Cratonic domains
-         o Volcanism
-         o Mantle rheology 
-         o Seismic cycle   <br>
+    <br> -- Cratonic domains
+         -- Volcanism
+         -- Mantle rheology 
+         -- Seismic cycle   <br>
 
 theme: jekyll-theme-minimal
 
