--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Walid Ben Mansour # your name (or website title) here
+title: Walid Ben Mansour PhD Geophysics # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Structural seismologist-Geophysicist
