--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
-title: Théa Ragon
-bio: "Postdoc at Caltech - Earthquakes, faults and inverse problems"
+title: Walid Ben Mansour
+bio: "  Structural seismologist-Geophysicist"
 locale: en_US
 url:
 image:
