--- a/_config.yml
+++ b/_config.yml
@@ -1,138 +1,14 @@
-# Site wide configuration
-
-title: Walid Ben Mansour
-bio: "  Structural seismologist-Geophysicist"
-locale: en_US
-url:
-image:
-  feature: 
-baseurl: /thearagon.github.io
-
-# Jekyll configuration
-
-markdown: kramdown
-highlighter: rouge
-lsi: false
-excerpt_separator: "\n\n"
-incremental: false
-
-# Plugins (previously gems:)
-plugins:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jekyll-include-cache
-
-# mimic GitHub Pages with --safe
-whitelist:
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-  - jekyll-include-cache
-
-# Reading Files
-include:
-  - .htaccess
-  - _pages
-exclude:
-  - "*.sublime-project"
-  - "*.sublime-workspace"
-  - vendor
-  - .asset-cache
-  - .bundle
-  - .jekyll-assets-cache
-  - .sass-cache
-  - assets/js/plugins
-  - assets/js/_main.js
-  - assets/js/vendor
-  - Capfile
-  - CHANGELOG
-  - config
-  - Gemfile
-  - Gruntfile.js
-  - gulpfile.js
-  - LICENSE
-  - log
-  - node_modules
-  - package.json
-  - package-lock.json
-  - Rakefile
-  - README
-  - tmp
-  - /docs # ignore Minimal Mistakes /docs
-  - /test # ignore Minimal Mistakes /test
-keep_files:
-  - .git
-  - .svn
-encoding: "utf-8"
-markdown_ext: "markdown,mkdown,mkdn,mkd,md"  
-
-# Markdown Processing
-kramdown:
-  input: GFM
-  hard_wrap: false
-  auto_ids: true
-  footnote_nr: 1
-  entity_output: as_char
-  toc_levels: 1..6
-  smart_quotes: lsquo,rsquo,ldquo,rdquo
-  enable_coderay: false
-
-# Sass/SCSS
-sass:
-  sass_dir: _sass
-  style: compressed # https://sass-lang.com/documentation/file.SASS_REFERENCE.html#output_style
-
-# Outputting
-permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
-paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones  
-
-analytics:
-  provider: "google-universal"
-  google:
-    tracking_id: "UA-172949099-1"
-    anonymize_ip: false # default  
-    
-# Site owner
-owner:
-  name: Théa Ragon
-  avatar: portrait.jpg
-  bio: "Postdoc at Caltech - Earthquakes, faults and inverse problems"
-  github: thearagon
-  bitbucket: #username
-  orcid: 0000-0002-1276-1910
-  scholar: v_X3_GoAAAAJ
-  mendeley: #username
-  researchgate: Thea_Ragon
-  stackoverflow: #http://stackoverflow.com/users/123456/username
-  email:
-  disqus-shortname: #username
-  twitter: thea_ragon
-  facebook: #username
-  google:
-    plus: #username
-    analytics: UA-172949099-1
-    verify:
-    ad-client:
-    ad-slot:
-  bing-verify:
-  linkedin: thearagon
-  instagram: #username
-  lastfm: #username
-  tumblr: #username
-  pinterest: #username
-  foursquare: #username
-  steam: #username
-  dribbble: #username
-  youtube: #username
-  soundcloud: #username
-  weibo: #username
-  flickr: #username
+title: Walid Ben Mansour PhD Geophysics # your name (or website title) here
+logo: "/images/logo.png?raw=true" # your photo (or logo) here
+description: > # your text below (remove <br> elements if you don't need line breaks)
+  Structural seismologist-Geophysicist
   
-#include: [".htaccess"]
-#exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
+  <br>Post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard).  <br>
+  
+    <br>Research interests:   <br>
+    <br> -- Cratonic domains
+         -- Volcanism
+         -- Mantle rheology 
+         -- Seismic cycle   <br>
 
+theme: jekyll-theme-minimal
