--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   Structural seismologist-Geophysicist
   
   <br>Post-doctoral research fellow working on multi-observable probabilistic tomography for different targets (mining, seismic hazard).  <br>
-  <img src="CH2.png">     
+  
+  <img src="CH.png">     
 
     <br>Research interests:   <br>
     <br> -- Cratonic domains
