--- a/_config.yml
+++ b/_config.yml
@@ -13,4 +13,7 @@ description: > # your text below (remove <br> elements if you don't need line br
          -- Mantle rheology 
          -- Seismic cycle 
          -- Subduction zone <br>
+         
+  <img src="CH2.png">     
+
 theme: jekyll-theme-minimal
